# CMakeList.txt : CMake project for 33.5.4, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("33.5.4")

# Add source to this project's executable.
add_executable (33.5.4 "33.5.4.cpp" )

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET 33.5.4 PROPERTY CXX_STANDARD 20)
endif()

# TODO: Add tests and install targets if needed.
